--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,11 @@ nav .brand-logo, .collection-header {
   text-transform: uppercase;
 }
 
+a[href="editdb.html"] {
+    padding: 0;
+    color: #444;
+}
+
 .slides li img {
   -webkit-filter: brightness(55%); /* Safari 6.0 - 9.0 */
   filter: brightness(55%);
